package br.unitins.model;

import jakarta.persistence.Entity;

@Entity
public class Diretor extends Pessoa {

    
}