@startuml diagramaClassesAdmin
title Diagrama de Classes - CRUD's Administrativos
caption Aluno: Bernardo dos Santos Graça

' ==================== CONFIGURAÇÕES ====================
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
    FontSize 12
}

' ==================== HERANÇA ====================
abstract class Pessoa {
    - nome : String
    - dataNascimento : LocalDate
    - nacionalidade : String
    - urlFoto : String
    + getUrlFoto() : String
    + setUrlFoto(String urlFoto) : void
    + getNacionalidade() : String
    + setNacionalidade(String nacionalidade) : void
    + getDataNascimento() : LocalDate
    + setDataNascimento(LocalDate data) : void
    + getNome() : String
    + setNome(String nome) : void
}

' Herança: Ator e Diretor são especializações de Pessoa
Ator -up-|> Pessoa
Diretor -up-|> Pessoa

' ==================== CLASSES PRINCIPAIS ====================

class Ator {
}

class Diretor {
}

class Filme {
    - nome : String
    - duracao : String
    - duracaoMinutos : Integer
    - sinopse : String
    - idiomaOriginal : String
    - anoLancamento : Integer
    - imagemPoster : String
    - trailerUrl : String
    + getNome() : String
    + setNome(String nome) : void
    + getDuracao() : String
    + setDuracao(String duracao) : void
    + getSinopse() : String
    + setSinopse(String sinopse) : void
}

class Genero {
    - nome : String
    + getNome() : String
    + setNome(String nome) : void
}

class Premio {
    - nome : String
    - categoria : String
    - ano : Integer
    + getNome() : String
    + setNome(String nome) : void
    + getCategoria() : String
    + setCategoria(String categoria) : void
    + getAno() : Integer
    + setAno(Integer ano) : void
}

class Sala {
    - numero : Integer
    - capacidade : Integer
    + getNumero() : Integer
    + setNumero(Integer numero) : void
    + getCapacidade() : Integer
    + setCapacidade(Integer capacidade) : void
}

class Poltrona {
    - codigo : String
    - linha : String
    - coluna : Integer
    + getCodigo() : String
    + setCodigo(String codigo) : void
    + getLinha() : String
    + setLinha(String linha) : void
    + getColuna() : Integer
    + setColuna(Integer coluna) : void
}

class Sessao {
    - inicio : LocalDateTime
    - fim : LocalDateTime
    - preco : Double
    - capacidadeTotal : Integer
    - capacidadeDisponivel : Integer
    + getInicio() : LocalDateTime
    + setInicio(LocalDateTime inicio) : void
    + getFim() : LocalDateTime
    + setFim(LocalDateTime fim) : void
    + getPreco() : Double
    + setPreco(Double preco) : void
}

class Cinema {
    - nome : String
    - cnpj : String
    - telefone : String
    + getNome() : String
    + setNome(String nome) : void
    + getCnpj() : String
    + setCnpj(String cnpj) : void
}

class Endereco {
    - logradouro : String
    - numero : String
    - complemento : String
    - bairro : String
    - cidade : String
    - estado : String
    - cep : String
    + getLogradouro() : String
    + setLogradouro(String logradouro) : void
    + getCidade() : String
    + setCidade(String cidade) : void
}

' ==================== ENUMS ====================

enum Disponibilidade {
    DISPONIVEL
    INDISPONIVEL
}

enum TipoSessao {
    DUBLADA
    LEGENDADA
}

enum ClassificacaoIndicativa {
    LIVRE
    DEZ
    DOZE
    QUATORZE
    DEZESSEIS
    DEZOITO
}

enum StatusSessao {
    EM_BREVE
    EM_EXIBICAO
    ENCERRADO
    CANCELADA
}

' ==================== RELACIONAMENTOS UNIDIRECIONAIS ====================

' -------------------- ASSOCIAÇÃO UNIDIRECIONAL --------------------
' CORRIGIDO: Filme -> Diretor (Filme conhece seu diretor)
Filme "*" --> "1" Diretor : possuiDiretor

' -------------------- AGREGAÇÃO UNIDIRECIONAL --------------------
Cinema "1" o--> "1..*" Sala : possui
Sala "1" o--> "1..*" Poltrona : contem

' -------------------- COMPOSIÇÃO UNIDIRECIONAL --------------------
Cinema "1" *--> "1" Endereco : localizadoEm

' -------------------- ASSOCIAÇÕES UNIDIRECIONAIS --------------------
Filme "*" --> "*" Ator : atores
Filme "*" --> "*" Genero : generos
Filme "1" --> "0..*" Premio : premios
Filme "*" --> "1" ClassificacaoIndicativa : classificacaoIndicativa

Ator "1" --> "0..*" Premio : premios

Sessao "*" --> "1" TipoSessao : tipo
Sessao "*" --> "1" StatusSessao : status
Sessao "*" --> "1" Filme : exibe
Sessao "*" --> "*" Sala : utiliza

Poltrona "*" --> "1" Disponibilidade : possui

@enduml